<resources>
    <string name="app_name">Travel Report</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="log_in_into_your_account">Welcome, \nLogin to continue</string>
    <string name="email">Email</string>
    <string name="email_semicolon">Email:</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="not_have_account_register">Don\'t have account? <u>Register!</u></string>
    <string name="welcome_register_to_continue">Welcome, \nRegister to continue</string>
    <string name="repeat_password">Repeat password</string>
    <string name="have_account_log_in">Have account? <u>Log in!</u></string>
    <string name="user_information">User information</string>
    <string name="add_image_from_camera">Add image\nfrom camera</string>
    <string name="add_image_from_gallery">Add Image\nfrom gallery</string>
    <string name="name">Full name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="phone_number_normal">Phone number</string>
    <string name="done">Done</string>
    <string name="enter_email">Enter email</string>
    <string name="register">Register</string>
    <string name="age_normal">Age</string>
    <string name="full_name">Full name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="nearest_location">Nearest location</string>
    <string name="rank">Rank</string>
    <string name="add_location">Add location</string>
    <string name="location_name">Location name</string>
    <string name="description">Description</string>
    <string name="rate">Rate</string>
    <string name="rate_semicolon">Rate:</string>
    <string name="user_rating">User Rating</string>
    <string name="account">Account</string>
    <string name="onlyname_semicolon">Name:</string>
    <string name="onlyname">Name</string>
    <string name="score">Score:</string>
    <string name="number_of_posts">Number of posts:</string>
    <string name="tag">Tag</string>
    <string name="tag_semicolon">Tag:</string>
    <string name="location">Location</string>
    <string name="description_semicolon">Description:</string>
    <string name="user_name">User name:</string>
    <string name="date_semicolon">Date:</string>
    <string name="date">Date</string>
    <string name="latitude_semicolon">Latitude:</string>
    <string name="search_by">Search location by ...</string>
    <string name="user">user</string>
    <string name="user_name_semicolon">User name:</string>
    <string name="user_name_acc">User name</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_user_name">Search by user name</string>
    <string name="search_by_tag">Search by tag</string>
    <string name="search_by_location">Search by location</string>
    <string name="show_on_map">Show on map</string>
    <string name="leave_comment">Leave a comment and rate location</string>
    <string name="commit">Commit</string>
    <string name="comment_here">Comment here</string>
    <string name="date_of_birth">Date of birth:</string>
</resources>