<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.main.AddLocationFragment">


    <TextView
        android:id="@+id/tvAddLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/add_location"
        android:textColor="@color/black"
        android:textSize="@dimen/_32sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="@dimen/_132sdp"
        android:layout_height="@dimen/_132sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddLocation" />

    <LinearLayout
        android:id="@+id/linButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLocation">

        <android.widget.Button
            android:id="@+id/bAddImageCamera"
            style="@style/yellowButton"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/add_image_from_camera" />

        <android.widget.Button
            android:id="@+id/bAddImageFromGalery"
            style="@style/yellowButton"
            android:text="@string/add_image_from_gallery" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLocationInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linButtons">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onlyname_semicolon"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/edittext_background"
            android:hint="@string/onlyname"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/edittext_background"
            android:hint="@string/description"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/etRate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/edittext_background"
            android:hint="@string/rate"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_semicolon"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/etTag"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/edittext_background"
            android:hint="@string/tag"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </LinearLayout>


    <android.widget.Button
        android:id="@+id/bAddLocation"
        style="@style/yellowButton"
        android:text="@string/add_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linLocationInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>